--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                     <h2>About me</h2>
                 </header>
                 <p>I have loved collecting and analyzing all types of data (including fitness, nutrition, car mileage, and more) since I started using a Fitbit to track my steps and sleep a few years ago. Moving forward, my goal is to help people make sense of all their data by creating tools that can enable that. To pursue this goal further, I am studying Computer Science in the <b>Master of Engineering program at University of California, Berkeley</b>. My specialization is in <b>Data Science</b> and I will graduate in Fall 2019.</p>
-                <p>The program focuses extensively on technical leadership in the industry and so, in addition to technical and business courses, I am working on an autonomous traffic Capstone team project with Prof. Alexandre Bayen titled <i>Applying Deep Multi-Agent Reinforcement Learning on Autonomous Traffic</i>. Our ultimate goal is to optimize the behavior of autonomous vehicles to improve a city-scale scenario.</p>
+                <p>The program focuses extensively on technical leadership in the industry and so, in addition to technical and business courses, I am working on an autonomous traffic Capstone team project with Prof. Alexandre Bayen titled <i>Applying Deep Multi-Agent Reinforcement Learning on Mixed Autonomy Traffic</i>. Our ultimate goal is to optimize the behavior of autonomous vehicles to improve a city-scale scenario.</p>
                 <p>In 2017, I published an iOS app called Drinks Tracker on the <b>App Store</b> based on an observation that I made a couple of years ago during my undergraduate at The Ohio State University. In early 2018, I was working on integrating Machine Learning in my app (to automatically suggest drinks to users based on their preferences and drink history) when Apple removed this category of apps from the App Store.</p>
             </article>
 
@@ -108,7 +108,7 @@
             <article id="projects" class="panel">
                     <header>
                         <h2>Working in a team with Prof. Alexandre Bayen on a Capstone Project</h2>
-                        <h4><i>Applying Deep Multi-Agent Reinforcement Learning on Autonomous Traffic</i></h4>
+                        <h4><i>Applying Deep Multi-Agent Reinforcement Learning on Mixed Autonomy Traffic</i></h4>
                         <p>August 2018 - present</p>
                     </header>
                     Using an open-source traffic control framework called Flow that works with SUMO (Simulation of Urban Mobility) and RLlib (Reinforcement Learning Library)
