--- a/index.html
+++ b/index.html
@@ -99,9 +99,35 @@
                 <header>
                     <h2>About me</h2>
                 </header>
-                <p>I have loved collecting and analyzing all types of data (including fitness, nutrition, car mileage, and more) since I started using a Fitbit to track my steps and sleep a few years ago. Moving forward, my goal is to help people make sense of all their data by creating tools that can enable that. To pursue this goal further, I am studying Computer Science in the <b>Master of Engineering program at University of California, Berkeley</b>. My specialization is in <b>Data Science</b> and I will graduate in Fall 2019.</p>
-                <p>The program focuses extensively on technical leadership in the industry and so, in addition to technical and business courses, I am working on an autonomous traffic Capstone team project with Prof. Alexandre Bayen titled <i>Applying Deep Multi-Agent Reinforcement Learning on Mixed Autonomy Traffic</i>. Our ultimate goal is to optimize the behavior of autonomous vehicles to improve a city-scale scenario.</p>
-                <p>In 2017, I published an iOS app called Drinks Tracker on the <b>App Store</b> based on an observation that I made a couple of years ago during my undergraduate at The Ohio State University. In early 2018, I was working on integrating Machine Learning in my app (to automatically suggest drinks to users based on their preferences and drink history) when Apple removed this category of apps from the App Store.</p>
+                <p>I have loved collecting and analyzing all types of data (including fitness, nutrition, car mileage, and more)
+                    since I started using a Fitbit to track my steps and sleep a few years ago. Moving forward, my goal is to help
+                    people make sense of all their data by creating tools that can enable that. To pursue this goal further, I am
+                    studying Computer Science in the Master of Engineering program at University of California, Berkeley. My
+                    specialization is in Data Science and I will graduate in Fall 2019.
+                </p>
+                <p>
+                    The program focuses extensively on technical leadership in the industry and so, in addition to technical and
+                    business courses, I am working on an autonomous traffic Capstone team project with Prof. Alexandre Bayen titled
+                    'Applying Deep Multi-Agent Reinforcement Learning on Mixed Autonomy Traffic.' Our ultimate goal is to optimize
+                    the behavior of autonomous vehicles to improve a city-scale scenario.
+                </p>
+                <p>
+                    In 2017, I published an iOS app called Drinks Tracker on the App Store based on an observation that I made a
+                    couple of years ago during my undergraduate at The Ohio State University. In early 2018, I was working on
+                    integrating Machine Learning in my app (to automatically suggest drinks to users based on their preferences and
+                    drink history) when Apple removed this category of apps from the App Store.
+                </p>
+                <p>
+                    My current fitness goal is to complete a 7.5 mile run in an hour. Currently, I am two minutes away from making
+                    it!
+                </p>
+                <p>
+                    In my spare time, I enjoy watching movies and TV, especially science fiction classics such as Star Trek and
+                    Doctor Who. 🖖
+                </p>
+                <p>
+                    Once I graduate in December 2019, I want to work as a Data Scientist, ideally in the Bay Area, to make better
+                    use of all the data that we generate every single day.</p>
             </article>
 
             <!-- Projects -->
