About Me updates

--- a/index.html
+++ b/index.html
@@ -99,11 +99,12 @@
                 <header>
                     <h2>About me</h2>
                 </header>
-                <p>I have loved collecting and analyzing all types of data (including fitness, nutrition, car mileage, and more)
-                    since I started using a Fitbit to track my steps and sleep a few years ago. Moving forward, my goal is to help
-                    people make sense of all their data by creating tools that can enable that. To pursue this goal further, I am
-                    studying Computer Science in the Master of Engineering program at University of California, Berkeley. My
-                    specialization is in Data Science and I will graduate in Fall 2019.
+                <p>
+                    I have loved collecting and analyzing all types of data (including fitness, nutrition, car mileage, and more) since
+                    I started using a Fitbit to track my steps and sleep a few years ago. Moving forward, my goal is to help people make
+                    sense of all their data by creating tools that can enable that. To pursue this goal further, I am studying Computer
+                    Science (with a specialization in Data Science) in the Master of Engineering program at University of California,
+                    Berkeley.
                 </p>
                 <p>
                     The program focuses extensively on technical leadership in the industry and so, in addition to technical and
@@ -113,7 +114,7 @@
                 </p>
                 <p>
                     In 2017, I published an iOS app called Drinks Tracker on the App Store based on an observation that I made a
-                    couple of years ago during my undergraduate at The Ohio State University. In early 2018, I was working on
+                    couple of years ago during my undergraduate years at The Ohio State University. In early 2018, I was working on
                     integrating Machine Learning in my app (to automatically suggest drinks to users based on their preferences and
                     drink history) when Apple removed this category of apps from the App Store.
                 </p>
@@ -126,8 +127,9 @@
                     Doctor Who. 🖖
                 </p>
                 <p>
-                    Once I graduate in December 2019, I want to work as a Data Scientist, ideally in the Bay Area, to make better
-                    use of all the data that we generate every single day.</p>
+                    Before I graduate in December 2019, I want to work in the summer as a Data Scientist Intern, ideally in the Bay Area, to
+                    learn to make better use of all the data that we generate every single day.
+                </p>
             </article>
 
             <!-- Projects -->
