--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                 <p>
                     The program focuses extensively on technical leadership in the industry and so, in addition to technical and
                     business courses, I am working on an autonomous traffic Capstone team project with Prof. Alexandre Bayen titled
-                    'Applying Deep Multi-Agent Reinforcement Learning on Mixed Autonomy Traffic.' Our ultimate goal is to optimize
+                    'Applying Deep Multi-Agent Reinforcement Learning on Mixed-Autonomy Traffic.' Our ultimate goal is to optimize
                     the behavior of autonomous vehicles to improve a city-scale scenario.
                 </p>
                 <p>
