--- a/index.html
+++ b/index.html
@@ -107,10 +107,11 @@
                     Berkeley.
                 </p>
                 <p>
-                    The program focuses extensively on technical leadership in the industry and so, in addition to technical and
-                    business courses, I am working on an autonomous traffic Capstone team project with Prof. Alexandre Bayen titled
-                    'Applying Deep Multi-Agent Reinforcement Learning on Mixed-Autonomy Traffic.' Our ultimate goal is to optimize
-                    the behavior of autonomous vehicles to improve a city-scale scenario.
+                    The MEng program focuses extensively on technical leadership in the industry and so, I am taking courses about
+                    Optimization Models in Engineering and Introduction to Machine Learning. In addition to technical and business courses,
+                    I am working on an autonomous traffic Capstone team project with Prof. Alexandre Bayen titled Applying Deep Multi-Agent
+                    Reinforcement Learning on Mixed-Autonomy Traffic. Our ultimate goal is to optimize the behavior of autonomous vehicles
+                    to improve a city-scale scenario.
                 </p>
                 <p>
                     In 2017, I published an iOS app called Drinks Tracker on the App Store based on an observation that I made a
