--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                     Berkeley.
                 </p>
                 <p>
-                    The MEng program focuses extensively on technical leadership in the industry and so, I am taking courses about
+                    The MEng program at UC Berkeley focuses extensively on technical leadership in the industry and so, I am taking courses about
                     Optimization Models in Engineering and Introduction to Machine Learning. In addition to technical and business courses,
                     I am working on an autonomous traffic Capstone team project with Prof. Alexandre Bayen titled Applying Deep Multi-Agent
                     Reinforcement Learning on Mixed-Autonomy Traffic. Our ultimate goal is to optimize the behavior of autonomous vehicles
