Added years and improved breaks

--- a/index.html
+++ b/index.html
@@ -82,15 +82,14 @@
                             Data Science
                         </a>
                         <br /><br />
-                        <a style="cursor:pointer" onclick="$('#link_work').click()">Former Machine Learning Intern</a>
+                        <a style="cursor:pointer" onclick="$('#link_work').click()">Machine Learning Intern</a> (Summer
+                        2019)
                         <br />
-                        <a style="cursor:pointer" onclick="$('#link_work').click()">Former Software Developer</a>
+                        <a style="cursor:pointer" onclick="$('#link_work').click()">Former Software Developer</a> (2016 - 2018)
                         <br />
-                        <a style="cursor:pointer" onclick="$('#link_app').click()">Former iOS App Developer</a>
+                        <a style="cursor:pointer" onclick="$('#link_app').click()">Former iOS App Developer</a> (2017-2018)
                         <br />
-                        <a href="http://www.osu.edu/" target="_blank">
-                            The Ohio State University (2016)
-                        </a>
+                        <a href="http://www.osu.edu/" target="_blank">The Ohio State University</a> (2016)
                     </p>
                 </header>
                 <a href="#work" class="jumplink pic">
@@ -236,13 +235,13 @@
                 </header>
                 During this summer internship at this early-stage startup, I developed classification models using
                 computer vision techniques in TensorFlow 2.
-                <br />
+                <br><br>
                 I also used transfer learning using popular architectures such as Inception and ResNet and created the
                 entire training pipeline for my models while learning to use an open-source model versioning system
                 called DVC. I assisted another intern in developing the entire system from reading images off the
                 camera, serving predictions using TensorFlow Server, and displaying the output to the user in the
                 browser.
-                <br />
+                <br><br>
                 Due to the limited availability of data specific to our domain, I also worked on collecting raw data to
                 use for modeling. During this process, I created a simple video annotation tool and used a popular
                 open-source annotation tool called Scalabel (developed at UC Berkeley). To produce more training data, I
