--- a/index.html
+++ b/index.html
@@ -85,9 +85,9 @@
                         <a style="cursor:pointer" onclick="$('#link_work').click()">Machine Learning Intern</a> (Summer
                         2019)
                         <br />
-                        <a style="cursor:pointer" onclick="$('#link_work').click()">Former Software Developer</a> (2016 - 2018)
+                        <a style="cursor:pointer" onclick="$('#link_work').click()">Software Developer</a> (2016 - 2018)
                         <br />
-                        <a style="cursor:pointer" onclick="$('#link_app').click()">Former iOS App Developer</a> (2017-2018)
+                        <a style="cursor:pointer" onclick="$('#link_app').click()">iOS App Developer</a> (2017-2018)
                         <br />
                         <a href="http://www.osu.edu/" target="_blank">The Ohio State University</a> (2016)
                     </p>
