--- a/index.html
+++ b/index.html
@@ -70,9 +70,7 @@
                         <a href="https://www.linkedin.com/in/umangs94" target="_blank">Umang Sharaf</a>
                     </h1>
                     <p>
-                        <a href="http://www.berkeley.edu/" target="_blank">
-                            University of California, Berkeley
-                        </a>
+                        <a href="http://www.berkeley.edu/" target="_blank">University of California, Berkeley</a> (2019)
                         <br>
                         <a href="https://eecs.berkeley.edu/academics/graduate/industry-programs/meng" target="_blank">
                             Master of Engineering
