--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                     I love collecting and analyzing how all my personal data (including fitness, nutrition, sleep,
                     location history, and more) interact with one another. To that end, my personal goal is to improve
                     everyone’s daily lives by combining all their data and helping them make sense of it. To pursue this
-                    goal further, I am studying Computer Science (with a specialization in Data Science) in the Master
+                    goal further, I am studying Computer Science (with a focus on Machine Learning) in the Master
                     of Engineering program at UC Berkeley.
                 </p>
                 <p>
