--- a/index.html
+++ b/index.html
@@ -70,24 +70,23 @@
                         <a href="https://www.linkedin.com/in/umangs94" target="_blank">Umang Sharaf</a>
                     </h1>
                     <p>
-                        <a href="http://www.berkeley.edu/" target="_blank">University of California, Berkeley</a> (2019)
+                        <a href="http://www.berkeley.edu/" target="_blank">University of California, Berkeley</a>
                         <br>
                         <a href="https://eecs.berkeley.edu/academics/graduate/industry-programs/meng" target="_blank">
                             Master of Engineering
                         </a>
                         in
                         <a href="https://eecs.berkeley.edu/academics/graduate/industry-programs/meng" target="_blank">
-                            Data Science
+                            Computer Science
                         </a>
                         <br /><br />
-                        <a style="cursor:pointer" onclick="$('#link_work').click()">Machine Learning Intern</a> (Summer
-                        2019)
+                        <a style="cursor:pointer" onclick="$('#link_work').click()">Machine Learning Intern</a>
                         <br />
-                        <a style="cursor:pointer" onclick="$('#link_work').click()">Software Developer</a> (2016 - 2018)
+                        <a style="cursor:pointer" onclick="$('#link_work').click()">Software Developer</a>
                         <br />
-                        <a style="cursor:pointer" onclick="$('#link_app').click()">iOS App Developer</a> (2017-2018)
+                        <a style="cursor:pointer" onclick="$('#link_app').click()">iOS App Developer</a>
                         <br />
-                        <a href="http://www.osu.edu/" target="_blank">The Ohio State University</a> (2016)
+                        <a href="http://www.osu.edu/" target="_blank">The Ohio State University</a>
                     </p>
                 </header>
                 <a href="#work" class="jumplink pic">
