Updated text in Contact Me

--- a/index.html
+++ b/index.html
@@ -353,8 +353,9 @@
                     <header>
                         <h2>Contact me</h2>
                     </header>
-                    <p>I am interested in Machine Learning internships for Summer 2019 before I graduate from University
-                        of California, Berkeley in December 2019.</p>
+                    <p>I am interested in Machine Learning positions starting January 2020 after I graduate from UC
+                        Berkeley in December.
+                    </p>
                 </a>
             </article>
         </div>
