--- a/index.html
+++ b/index.html
@@ -108,9 +108,9 @@
                 </p>
                 <p>
                     Over Summer 2019, I interned at an early-stage startup as a Machine Learning Intern and worked on
-                    developing classification models using computer vision techniques in TensorFlow 2. Transfer learning
-                    was an important method and I used several models including Inception and ResNet. Along the way, I
-                    collected raw data and created a simple tool for annotating videos. I also created many synthetic
+                    developing classification models using computer vision techniques in TensorFlow 2. I used transfer
+                    learning on many models including InceptionV3 and ResNet-152. Along the way, I scraped for images
+                    and created a video annotation tool using opencv2. I also synthesized 40k randomized simulated
                     images for training after learning to use Blender.
                 </p>
                 <p>
@@ -159,7 +159,6 @@
                 For this project, we made use of reinforcement learning techniques while improving an open-source
                 framework for mixed-autonomy traffic called Flow that works with SUMO (Simulation of Urban Mobility) and
                 RLlib (Reinforcement Learning Library).
-
                 <header>
                     <img class="image centered web" style="max-width:200px" src="images/drinks_tracker.png"
                         alt="Drinks Tracker">
@@ -180,7 +179,6 @@
                 Used Beautiful Soup 4 and scikit-learn to implement several clustering and classification algorithms
                 such as DBSCAN, Hierarchical Clustering, Naïve-Bayesian, and K-Nearest Neighbors
                 Calculated Jaccard Similarity scores and Mean Squared Error to accurately create association rules
-
                 <header>
                     <h2>Voice Analytics Capstone project</h2>
                     <h4>for PureCloud by Interactive Intelligence</h4>
@@ -189,7 +187,6 @@
                 Performed tokenization using IBM BlueMix after using Google Cloud Speech for voice recognition
                 Analyzed the speech input to automatically create meetings in Google Calendar
                 Worked with the IBM BlueMix, Google Cloud Speech, and Google Calendar APIs along with AWS
-
                 <header>
                     <h2>Several Android apps</h2>
                     <h4>Worked with Twitter, Google Calendar, and Google SafeSearch APIs</h4>
@@ -230,21 +227,17 @@
                     <h3 style="text-transform:uppercase">Machine Learning Intern</h3>
                     <p>June - August 2019, Oakland, CA</p>
                 </header>
-                During this summer internship at this early-stage startup, I developed classification models using
-                computer vision techniques in TensorFlow 2.
-                <br><br>
-                I also used transfer learning using popular architectures such as Inception and ResNet and created the
-                entire training pipeline for my models while learning to use an open-source model versioning system
-                called DVC. I assisted another intern in developing the entire system from reading images off the
-                camera, serving predictions using TensorFlow Server, and displaying the output to the user in the
-                browser.
-                <br><br>
-                Due to the limited availability of data specific to our domain, I also worked on collecting raw data to
-                use for modeling. During this process, I created a simple video annotation tool and used a popular
-                open-source annotation tool called Scalabel (developed at UC Berkeley). To produce more training data, I
-                also learned to use Blender and created synthetic images that could be used directly in training my
-                models.
-
+                Developed classification models using computer vision techniques in TensorFlow 2. Achieved an AUC of
+                0.87 and accuracy of 84% despite only having 2.5k training images
+                <br />Used transfer learning on InceptionV3 and ResNet-152, and built the training pipeline for my
+                models which used an open-source model versioning system called DVC
+                <br />Assisted another intern in developing the end-to-end system from reading images off the camera,
+                serving predictions using TensorFlow Server, and displaying the output to the user in the browser
+                <br />Scraped images to use for modeling and created a video annotation tool using opencv2 to convert
+                relevant YouTube videos' frames to training images. Also used and contributed to a popular open-source
+                annotation tool called Scalabel (developed at UC Berkeley)
+                <br />Learned to use Blender and created 40k randomized synthetic images that could be used directly in
+                training my models
                 <header>
                     <h2>Online Computer Library Center (OCLC)</h2>
                     <h3 style="text-transform:uppercase">Software Developer</h3>
@@ -261,7 +254,6 @@
                 enterprise
                 business partners to offer better support of mobile application authentication
                 <br />Worked with the Operations team to deploy our webapps successfully in the Production environment
-
                 <header>
                     <h2>Qualcomm Life</h2>
                     <h3 style="text-transform:uppercase">Interim Engineering Intern</h3>
