--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
             <article id="work" class="panel">
                 <header>
                     <h2>LookDeep Health</h2>
-                    <h3 style="text-transform:uppercase">Machine Learning Intern</h3>
+                    <h3 style="text-transform:uppercase">Machine Learning Engineering Intern</h3>
                     <p>June - August 2019, Oakland, CA</p>
                 </header>
                 Developed classification models using computer vision techniques in TensorFlow 2. Achieved an AUC of
