Added line breaks

--- a/index.html
+++ b/index.html
@@ -229,14 +229,14 @@
                 </header>
                 Developed classification models using computer vision techniques in TensorFlow 2. Achieved an AUC of
                 0.87 and accuracy of 84% despite only having 2.5k training images
-                <br />Used transfer learning on InceptionV3 and ResNet-152, and built the training pipeline for my
+                <br><br>Used transfer learning on InceptionV3 and ResNet-152, and built the training pipeline for my
                 models which used an open-source model versioning system called DVC
-                <br />Assisted another intern in developing the end-to-end system from reading images off the camera,
+                <br><br>Assisted another intern in developing the end-to-end system from reading images off the camera,
                 serving predictions using TensorFlow Server, and displaying the output to the user in the browser
-                <br />Scraped images to use for modeling and created a video annotation tool using opencv2 to convert
+                <br><br>Scraped images to use for modeling and created a video annotation tool using opencv2 to convert
                 relevant YouTube videos' frames to training images. Also used and contributed to a popular open-source
                 annotation tool called Scalabel (developed at UC Berkeley)
-                <br />Learned to use Blender and created 40k randomized synthetic images that could be used directly in
+                <br><br>Learned to use Blender and created 40k randomized synthetic images that could be used directly in
                 training my models
                 <header>
                     <h2>Online Computer Library Center (OCLC)</h2>
