More line breaks

--- a/index.html
+++ b/index.html
@@ -246,14 +246,14 @@
                 Improved and innovated on several Java projects used internally and externally for purposes ranging from
                 data retrieval,
                 transformation, and organization to security
-                <br />Supported a multi-million dollar international contract by writing utilities that enabled our team
+                <br><br>Supported a multi-million dollar international contract by writing utilities that enabled our team
                 to internationalize a webapp in 20+ languages
-                <br />Optimized database handling and functionality for compliance with privacy requirements while
+                <br><br>Optimized database handling and functionality for compliance with privacy requirements while
                 updating legacy projects to modern technologies such as Spring and SQL
-                <br />Achieved our corporate strategy goals by enhancing OAuth authentication services used by OCLC’s
+                <br><br>Achieved our corporate strategy goals by enhancing OAuth authentication services used by OCLC’s
                 enterprise
                 business partners to offer better support of mobile application authentication
-                <br />Worked with the Operations team to deploy our webapps successfully in the Production environment
+                <br><br>Worked with the Operations team to deploy our webapps successfully in the Production environment
                 <header>
                     <h2>Qualcomm Life</h2>
                     <h3 style="text-transform:uppercase">Interim Engineering Intern</h3>
