--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                             Computer Science
                         </a>
                         <br /><br />
-                        <a style="cursor:pointer" onclick="$('#link_work').click()">Machine Learning Intern</a>
+                        <a style="cursor:pointer" onclick="$('#link_work').click()">Machine Learning Engineering Intern</a>
                         <br />
                         <a style="cursor:pointer" onclick="$('#link_work').click()">Software Developer</a>
                         <br />
