--- a/index.html
+++ b/index.html
@@ -80,7 +80,8 @@
                             Computer Science
                         </a>
                         <br /><br />
-                        <a style="cursor:pointer" onclick="$('#link_work').click()">Machine Learning Engineering Intern</a>
+                        <a style="cursor:pointer" onclick="$('#link_work').click()">Machine Learning Engineering
+                            Intern</a>
                         <br />
                         <a style="cursor:pointer" onclick="$('#link_work').click()">Software Developer</a>
                         <br />
@@ -236,7 +237,8 @@
                 <br><br>Scraped images to use for modeling and created a video annotation tool using opencv2 to convert
                 relevant YouTube videos' frames to training images. Also used and contributed to a popular open-source
                 annotation tool called Scalabel (developed at UC Berkeley)
-                <br><br>Learned to use Blender and created 40k randomized synthetic images that could be used directly in
+                <br><br>Learned to use Blender and created 40k randomized synthetic images that could be used directly
+                in
                 training my models
                 <header>
                     <h2>Online Computer Library Center (OCLC)</h2>
@@ -246,7 +248,8 @@
                 Improved and innovated on several Java projects used internally and externally for purposes ranging from
                 data retrieval,
                 transformation, and organization to security
-                <br><br>Supported a multi-million dollar international contract by writing utilities that enabled our team
+                <br><br>Supported a multi-million dollar international contract by writing utilities that enabled our
+                team
                 to internationalize a webapp in 20+ languages
                 <br><br>Optimized database handling and functionality for compliance with privacy requirements while
                 updating legacy projects to modern technologies such as Spring and SQL
@@ -345,8 +348,8 @@
                     <header>
                         <h2>Contact me</h2>
                     </header>
-                    <p>I am interested in Machine Learning positions starting January 2020 after I graduate from UC
-                        Berkeley in December.
+                    <p>I am interested in Machine Learning Engineering positions starting January 2020 after I graduate
+                        from UC Berkeley in December.
                     </p>
                 </a>
             </article>
