--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                 <p>
                     The MEng program focuses extensively on technical leadership in the industry and so, I am taking
                     courses about Machine Learning, Deep RL, and ML Systems. In Fall 2019, I am researching traffic
-                    light control using Deep RL.
+                    light coordination using Deep RL.
                 </p>
                 <p>
                     In 2017, I published an iOS app called Drinks Tracker on the App Store based on an observation that
@@ -144,7 +144,7 @@
             <article id="projects" class="panel">
                 <header>
                     <h2>Researching with Prof. Alexandre Bayen</h2>
-                    <h4><i>Traffic Light Control using Deep RL</i></h4>
+                    <h4><i>Traffic Light Coordination using Deep RL</i></h4>
                     <p>August 2019 - present</p>
                 </header>
                 <header>
